--- a/Python/flask/templates/novo.html
+++ b/Python/flask/templates/novo.html
@@ -1,6 +1,7 @@
 {% extends 'template.html' %}
 {% block content %}
       <form action="/criar" method="post">
+        <input type="file" name="imagem" accept=".jpg">
         <fieldset>
           <div class="form-group">
             <label for="nome">Nome: </label>
