--- a/Python/flask/templates/novo.html
+++ b/Python/flask/templates/novo.html
@@ -1,6 +1,17 @@
 {% extends 'template.html' %}
 {% block content %}
-      <form action="/criar" method="post">
+      <form action="/criar" method="post" enctype="multipart/form-data">
+        
+        <figure class="img-thumbnail col-md-4">
+          <img class="img-fluid" src="{{url_for('imagem_capa', nome_arquivo = 'capa_padrao.jpg')}}">
+          <figcaption>
+            <label for="arquivo" class="fileContainer">
+              Mudar Capa
+              <input type="file" name="arquivo" accept=".jpg">
+            </label>
+          </figcaption>
+        </figure>
+
         <fieldset>
           <div class="form-group">
             <label for="nome">Nome: </label>
