--- a/Python/flask/templates/template.html
+++ b/Python/flask/templates/template.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ url_for('static', filename= css ) }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename= css_app ) }}">
+
+    
     <title>Jogoteca</title>
 </head>
 <body>
